--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,160 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: "Cross Purpose Client Portal Documentation"
+description: "Complete documentation for the Cross Purpose participant and coaching platform"
 ---
 
-## Setting up
+# Welcome to Cross Purpose Client Portal
 
-Get your documentation site up and running in minutes.
+<img
+  className="block dark:hidden"
+  src="/images/hero-light.svg"
+  alt="Cross Purpose Hero Light"
+/>
+<img
+  className="hidden dark:block"
+  src="/images/hero-dark.svg"
+  alt="Cross Purpose Hero Dark"
+/>
 
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Follow our three step quickstart guide.
-</Card>
+## About Cross Purpose
 
-## Make it yours
+Cross Purpose is a transformative program that partners with adults experiencing poverty to help them discover and pursue their purpose in life. Our client portal provides a comprehensive platform for participants, coaches, and administrators to collaborate throughout the journey.
 
-Design a docs site that looks great and empowers your users.
+## What's Inside
 
-<Columns cols={2}>
+<CardGroup cols={2}>
   <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
+    title="Programs"
+    icon="graduation-cap"
+    href="/cp/SNAP-Assistance"
   >
-    Edit your docs locally and preview them in real time.
+    Learn about our assistance programs including SNAP emergency assistance
   </Card>
   <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
+    title="Portal Access"
+    icon="house"
+    href="https://portal.crosspurpose.org"
   >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
+    Access the Cross Purpose participant portal
   </Card>
   <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
+    title="GitHub Repository"
+    icon="github"
+    href="https://github.com/sabreil/docs"
   >
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
-
-## Create beautiful pages
-
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
+    View source code and contribute to the documentation
   </Card>
   <Card
-    title="Code samples"
+    title="Technical Guides"
     icon="code"
-    href="/essentials/code"
+    href="/cp/technical-overview"
   >
-    Add sample code to demonstrate how to use your product.
+    Technical documentation for developers
   </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
+</CardGroup>
 
-## Need inspiration?
+## Quick Links
 
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
-</Card>
+<AccordionGroup>
+  <Accordion icon="users" title="For Participants">
+    - Explore your personalized dashboard
+    - Track your progress through program phases
+    - Access resources and complete assessments
+    - Communicate with your coach
+    - Request support services like SNAP assistance
+  </Accordion>
+
+  <Accordion icon="user-tie" title="For Coaches">
+    - Manage your participant roster
+    - Track participant progress and phases
+    - Submit coaching forms and notes
+    - Approve support service requests
+    - View analytics and insights
+  </Accordion>
+
+  <Accordion icon="user-shield" title="For Administrators">
+    - System-wide analytics and reporting
+    - User management and permissions
+    - Salesforce integration monitoring
+    - Phase calculation auditing
+    - Support service oversight
+  </Accordion>
+</AccordionGroup>
+
+## Platform Features
+
+### 🎯 Explorer Journey
+Our innovative Explorer journey provides participants with:
+- Personalized learning paths
+- Interactive modules and assessments
+- Achievement tracking and rewards
+- Progress visualization
+
+### 🤝 Coaching Support
+Comprehensive coaching tools including:
+- Real-time messaging
+- Progress tracking
+- Form submissions
+- Task management
+
+### 📊 Analytics & Reporting
+Powerful insights for decision-making:
+- Phase progression analytics
+- Participant engagement metrics
+- Financial tracking
+- Custom reports
+
+### ☁️ Salesforce Integration
+Seamless synchronization with Salesforce:
+- Automatic contact creation
+- Form submission sync
+- Phase updates
+- Support service tracking
+
+## Getting Started
+
+<Steps>
+  <Step title="Access the Portal">
+    Navigate to [portal.crosspurpose.org](https://portal.crosspurpose.org) and sign in with your credentials
+  </Step>
+  <Step title="Complete Your Profile">
+    Fill out your profile information and complete any required onboarding steps
+  </Step>
+  <Step title="Explore Your Dashboard">
+    Familiarize yourself with your personalized dashboard and available features
+  </Step>
+  <Step title="Connect with Your Coach">
+    Reach out to your assigned coach for guidance and support
+  </Step>
+</Steps>
+
+## Technical Stack
+
+Built with modern, scalable technologies:
+
+- **Frontend**: Next.js 14 with React 18
+- **Backend**: API Routes with TypeScript
+- **Database**: PostgreSQL with Prisma ORM
+- **Hosting**: Vercel with Neon database
+- **Integrations**: Salesforce, Track1099, Resend
+
+## Need Help?
+
+<CardGroup cols={3}>
+  <Card title="Search Documentation" icon="magnifying-glass">
+    Use the search bar above to find what you need
+  </Card>
+  <Card title="GitHub Issues" icon="bug">
+    Report bugs or request features on GitHub
+  </Card>
+  <Card title="Contact Support" icon="envelope">
+    Reach out to the technical team for assistance
+  </Card>
+</CardGroup>
+
+---
+
+<Note>
+  This documentation is continuously updated. Last updated: October 2025
+</Note>
+
